# robot_workspace

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/panda_data/share/panda_data/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/panda_data/share/panda_data/config/: panda.ros2_control.xacro  panda.urdf.xacro
install/panda_data/share/panda_data/launch/: demo.launch.py
log/: latest_build
src/panda_data/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_data/config/: panda.srdf  panda.urdf
src/panda_data/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  rsp_sim.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/panda_data/worlds/: tpl_with_robot_final.sdf
src/panda_data/worlds/tpl_link/: model.config  model.sdf
